--- a/src/components/StaticData/StaticData.css
+++ b/src/components/StaticData/StaticData.css
@@ -1,10 +1,10 @@
-.learning-options-container {
+.value-options-container {
   display: flex;
   align-items: flex-start;
   flex-wrap: wrap;
 }
 
-.learning-option-button {
+.value-list-item {
   padding: 0.5rem;
   border-radius: 25px;
   background: transparent;
